# Meet-Mev2

./: CNAME  README.md  dockerfile  index.html  main.py  package-lock.json  package.json  pyproject.toml  settings.py  tailwind.config.js
assets/js/: main.js  main_2.js
src/: App.jsx  main.jsx  styles.css
src/components/: About.jsx  Blogs.jsx  Contact.jsx  Education.jsx  Experience.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Projects.jsx  Services.jsx  Skills.jsx  Testimonials.jsx
