[tool.poetry]
name = "meet me"
version = "2.0"
description = "Victor Adedeji Oluwatobiloba Portfolio Website"
authors = ["obigvee <adedejivictor98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
